--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
+django==4.0.3
 djangorestframework==3.14.0
 elsapy==0.5.0
 nltk==3.7
 pybliometrics==3.4.0
 requests==2.28.1
+django-debug-toolbar==3.7.0
