--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@ mkm/knowledge/api_utils/info.csv
 mkm/knowledge/api_utils/data/*
 mkm/knowledge/api_utils/logs/*
 
+mkm/dump.json
+
 difflists
 
 *.pyc
+
+*.sqlite3
